// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab component it renders properly when select is false 1`] = `
<div
  className="text-white font-bold py-2 px-4 uppercase cursor-pointer "
  onClick={[Function]}
>
  <p>
    Tab 1
  </p>
</div>
`;

exports[`Tab component it renders properly when selected is true 1`] = `
<div
  className="text-white font-bold py-2 px-4 uppercase cursor-pointer bg-red-100"
  onClick={[Function]}
>
  <p>
    Tab 1
  </p>
</div>
`;
